--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
@@ -17,6 +18,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
+    "react-native-table-component": "^1.2.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
